Fixed squashed officially reserved flag image

--- a/source/Ammeep.GiftRegister.Web/Content/Site.css
+++ b/source/Ammeep.GiftRegister.Web/Content/Site.css
@@ -726,7 +726,7 @@ div.pagination {
  
  .officially_reserved {
 	float: right;
-	width: 233px;
+	width: 240px;
 	height: 40px;
     margin-top: 58px;
 	text-indent: -9999px;
